# bedpull

./: Cargo.toml  README.md
docs/: notes.md
examples/: hg002pat_to_hs1.rfc1_only.paf  readme.md  rfc1.bed
src/: bed.rs  cigar.rs  cli.rs  main.rs  paf.rs  reads.rs  utils.rs
